20180405 마이페이지 css

--- a/src/main/webapp/resources/assets/css/style.css
+++ b/src/main/webapp/resources/assets/css/style.css
@@ -428,6 +428,9 @@ a:hover {
 
 .bg-light-gray {
 	background-color: #f9f9f9;
+	min-height: 100%;
+	margin-bottom: -50px;
+	padding-bottom:50px;
 }
 
 .bg-white {
